--- a/samples/entropy/Makefile
+++ b/samples/entropy/Makefile
@@ -12,14 +12,11 @@ CFLAGS = $(NULL)
 DFLAGS = $(NULL)
 IFLAGS = -I$(INCDIR) -I$(DEPDIR)/include
 
+OFFLOAD ?= 1
 STATIC ?= 0
 OMP ?= 1
 DBG ?= 0
 IPO ?= 0
-
-ifeq (0,$(MIC))
-	OFFLOAD = 0
-endif
 
 OUTNAME = $(shell basename $(ROOTDIR))
 HEADERS = $(shell ls -1 $(INCDIR)/*.h   2> /dev/null | tr "\n" " ") \
