--- a/samples/multi-dgemm/Makefile
+++ b/samples/multi-dgemm/Makefile
@@ -8,9 +8,11 @@ OUTDIR = .
 CXXFLAGS = $(NULL)
 CFLAGS = $(NULL)
 DFLAGS = $(NULL)
-IFLAGS = -I$(INCDIR) -I$(DEPDIR)/include
+IFLAGS = -I$(INCDIR) -I$(BLDDIR) -I$(DEPDIR)/include
 
+MKL ?= 2
 OMP ?= 1
+SYM ?= 0
 DBG ?= 0
 IPO ?= 0
 
@@ -37,29 +39,44 @@ ifneq ($(MKLROOT),)
 		MKL_STATIC ?= 0
 	endif
 else
-	MKL ?= 0
+	MKL = 0
 endif
 
 OUTNAME = $(shell basename $(ROOTDIR))
 HEADERS = $(shell ls -1 $(INCDIR)/*.h   2> /dev/null | tr "\n" " ") \
           $(shell ls -1 $(SRCDIR)/*.hpp 2> /dev/null | tr "\n" " ") \
           $(shell ls -1 $(SRCDIR)/*.hxx 2> /dev/null | tr "\n" " ") \
-          $(shell ls -1 $(SRCDIR)/*.hh 2>  /dev/null | tr "\n" " ")
+          $(shell ls -1 $(SRCDIR)/*.hh  2> /dev/null | tr "\n" " ")
 CPPSRCS = $(shell ls -1 $(SRCDIR)/*.cpp 2> /dev/null | tr "\n" " ")
 CXXSRCS = $(shell ls -1 $(SRCDIR)/*.cxx 2> /dev/null | tr "\n" " ")
 CCXSRCS = $(shell ls -1 $(SRCDIR)/*.cc  2> /dev/null | tr "\n" " ")
 CSOURCS = $(shell ls -1 $(SRCDIR)/*.c   2> /dev/null | tr "\n" " ")
-SOURCES = $(CPPSRCS) $(CXXSRCS) $(CCXSRCS) $(CSOURCS)
+FTNSRCS = $(shell ls -1 $(SRCDIR)/*.f   2> /dev/null | tr "\n" " ")
+F77SRCS = $(shell ls -1 $(SRCDIR)/*.F   2> /dev/null | tr "\n" " ")
+F90SRCS = $(shell ls -1 $(SRCDIR)/*.f90 2> /dev/null | tr "\n" " ")
+FTNINCS = $(shell ls -1 $(DEPDIR)/include/*.f   2> /dev/null | tr "\n" " ")
+F77INCS = $(shell ls -1 $(DEPDIR)/include/*.F   2> /dev/null | tr "\n" " ")
+F90INCS = $(shell ls -1 $(DEPDIR)/include/*.f90 2> /dev/null | tr "\n" " ")
+FTNMODS = $(patsubst %,$(BLDDIR)/%,$(notdir $(FTNINCS:.f=-mod.o)))
+F77MODS = $(patsubst %,$(BLDDIR)/%,$(notdir $(F77INCS:.F=-mod77.o)))
+F90MODS = $(patsubst %,$(BLDDIR)/%,$(notdir $(F90INCS:.f90=-mod90.o)))
+MODULES = $(FTNMODS) $(F77MODS) $(F90MODS)
+SOURCES = $(CPPSRCS) $(CXXSRCS) $(CCXSRCS) $(CSOURCS) $(FTNSRCS) $(F77SRCS) $(F90SRCS)
 CPPOBJS = $(patsubst %,$(BLDDIR)/%,$(notdir $(CPPSRCS:.cpp=-cpp.o)))
 CXXOBJS = $(patsubst %,$(BLDDIR)/%,$(notdir $(CXXSRCS:.cxx=-cxx.o)))
 CCXOBJS = $(patsubst %,$(BLDDIR)/%,$(notdir $(CCXSRCS:.cc=-cc.o)))
 COBJCTS = $(patsubst %,$(BLDDIR)/%,$(notdir $(CSOURCS:.c=-c.o)))
-OBJECTS = $(CPPOBJS) $(CXXOBJS) $(CCXOBJS) $(COBJCTS)
+FTNOBJS = $(patsubst %,$(BLDDIR)/%,$(notdir $(CSOURCS:.f=-f.o)))
+F77OBJS = $(patsubst %,$(BLDDIR)/%,$(notdir $(CSOURCS:.F=-f77.o)))
+F90OBJS = $(patsubst %,$(BLDDIR)/%,$(notdir $(CSOURCS:.f90=-f90.o)))
+OBJECTS = $(CPPOBJS) $(CXXOBJS) $(CCXOBJS) $(COBJCTS) $(FTNOBJS) $(F77OBJS) $(F90OBJS)
 
-ICPC = $(notdir $(shell which icpc 2> /dev/null))
-ICC = $(notdir $(shell which icc 2> /dev/null))
-GPP = $(notdir $(shell which g++ 2> /dev/null))
-GCC = $(notdir $(shell which gcc 2> /dev/null))
+ICPC    = $(notdir $(shell which icpc     2> /dev/null))
+ICC     = $(notdir $(shell which icc      2> /dev/null))
+IFORT   = $(notdir $(shell which ifort    2> /dev/null))
+GPP     = $(notdir $(shell which g++      2> /dev/null))
+GCC     = $(notdir $(shell which gcc      2> /dev/null))
+GFC     = $(notdir $(shell which gfortran 2> /dev/null))
 
 ifneq (,$(ICPC))
 	CXX = $(ICPC)
@@ -77,23 +94,36 @@ ifneq (,$(ICC))
 else
 	CC = $(GCC)
 endif
+ifneq (,$(IFORT))
+	FC = $(IFORT)
+else
+	FC = $(GFC)
+endif
 ifneq ($(CXX),)
 	LD = $(CXX)
 endif
 ifeq ($(LD),)
 	LD = $(CC)
 endif
+ifeq ($(LD),)
+	LD = $(FC)
+endif
 
-ifneq (,$(filter icpc icc,$(CXX) $(CC)))
+ifneq (,$(filter icpc icc ifort,$(CXX) $(CC) $(FC)))
 	CXXFLAGS += -fPIC -Wall -std=c++0x
 	CFLAGS += -fPIC -Wall -std=c99
+	FCFLAGS += -fPIC
+	LDFLAGS += -fPIC
 	ifeq (0,$(DBG))
 		CXXFLAGS += -fno-alias -ansi-alias -O2
 		CFLAGS += -fno-alias -ansi-alias -O2
+		FCMTFLAGS += -threads
+		FCFLAGS += -O2
 		DFLAGS += -DNDEBUG
 		ifneq ($(IPO),0)
 			CXXFLAGS += -ipo
 			CFLAGS += -ipo
+			FCFLAGS += -ipo
 		endif
 		ifeq ($(AVX),1)
 			TARGET = -xAVX
@@ -104,34 +134,63 @@ ifneq (,$(filter icpc icc,$(CXX) $(CC)))
 		else
 			TARGET = -xHost
 		endif
-	else ifneq (1,$(DBG))
-		CXXFLAGS += -O0 -g3 -gdwarf-2 -debug inline-debug-info
-		CFLAGS += -O0 -g3 -gdwarf-2 -debug inline-debug-info
 	else
-		CXXFLAGS += -O0 -g
-		CFLAGS += -O0 -g
+		CXXFLAGS += -O0
+		CFLAGS += -O0
+		FCFLAGS += -O0
+		SYM = $(DBG)
+	endif
+	ifneq (0,$(SYM))
+		ifneq (1,$(SYM))
+			CXXFLAGS := -g3 -gdwarf-2 -debug inline-debug-info $(CXXFLAGS)
+			CFLAGS := -g3 -gdwarf-2 -debug inline-debug-info $(CFLAGS)
+			FCFLAGS := -g $(FCFLAGS)
+		else
+			CXXFLAGS := -g $(CXXFLAGS)
+			CFLAGS := -g $(CFLAGS)
+			FCFLAGS := -g $(FCFLAGS)
+		endif
 	endif
 	ifneq ($(OMP),0)
 		CXXFLAGS += -openmp
 		CFLAGS += -openmp
+		FCFLAGS += -openmp
 		LDFLAGS += -openmp
 	endif
 	ifeq (0,$(OFFLOAD))
 		CXXFLAGS += -no-offload
 		CFLAGS += -no-offload
+		FCFLAGS += -no-offload
 	endif
-	LDFLAGS += -fPIC
 	ifneq ($(STATIC),0)
-		LDFLAGS += -no-intel-extensions -static-intel
+		SLDFLAGS += -no-intel-extensions -static-intel
 	endif
+	FCMODDIRFLAG = -module
 else # GCC assumed
+	VERSION = $(shell $(GCC) --version | grep "gcc (GCC)" | sed "s/gcc (GCC) \([0-9]\+\.[0-9]\+\.[0-9]\+\).*$$/\1/")
+	VERSION_MAJOR = $(shell echo "$(VERSION)" | cut -d"." -f1)
+	VERSION_MINOR = $(shell echo "$(VERSION)" | cut -d"." -f2)
+	VERSION_PATCH = $(shell echo "$(VERSION)" | cut -d"." -f3)
 	MIC = 0
 	CXXFLAGS += -Wall -std=c++0x
 	CFLAGS += -Wall
+	ifneq ($(OS),Windows_NT)
+		CXXFLAGS += -fPIC
+		CFLAGS += -fPIC
+		FCFLAGS += -fPIC
+		LDFLAGS += -fPIC
+	endif
 	ifeq (0,$(DBG))
 		CXXFLAGS += -O2 -ftree-vectorize -ffast-math -funroll-loops
 		CFLAGS += -O2 -ftree-vectorize -ffast-math -funroll-loops
+		FCFLAGS += -O2 -ftree-vectorize -ffast-math -funroll-loops
 		DFLAGS += -DNDEBUG
+		ifneq ($(IPO),0)
+			CXXFLAGS += -flto -ffat-lto-objects
+			CFLAGS += -flto -ffat-lto-objects
+			FCFLAGS += -flto -ffat-lto-objects
+			LDFLAGS += -flto
+		endif
 		ifeq ($(AVX),1)
 			TARGET = -mavx
 		else ifeq ($(AVX),2)
@@ -141,26 +200,33 @@ else # GCC assumed
 		else
 			TARGET = -march=native
 		endif
-	else ifneq (1,$(DBG))
-		CXXFLAGS += -O0 -g3 -gdwarf-2
-		CFLAGS += -O0 -g3 -gdwarf-2
 	else
-		CXXFLAGS += -O0 -g
-		CFLAGS += -O0 -g
+		CXXFLAGS += -O0
+		CFLAGS += -O0
+		FCFLAGS += -O0
+		SYM = $(DBG)
+	endif
+	ifneq (0,$(SYM))
+		ifneq (1,$(SYM))
+			CXXFLAGS := -g3 -gdwarf-2 -debug inline-debug-info $(CXXFLAGS)
+			CFLAGS := -g3 -gdwarf-2 -debug inline-debug-info $(CFLAGS)
+			FCFLAGS := -g $(FCFLAGS)
+		else
+			CXXFLAGS := -g $(CXXFLAGS)
+			CFLAGS := -g $(CFLAGS)
+			FCFLAGS := -g $(FCFLAGS)
+		endif
 	endif
 	ifneq ($(OMP),0)
 		CXXFLAGS += -fopenmp
 		CFLAGS += -fopenmp
+		FCFLAGS += -fopenmp
 		LDFLAGS += -fopenmp
 	endif
-	ifneq ($(OS),Windows_NT)
-		CXXFLAGS += -fPIC
-		CFLAGS += -fPIC
-		LDFLAGS += -fPIC
-	endif
 	ifneq ($(STATIC),0)
-		LDFLAGS += -static
+		SLDFLAGS += -static
 	endif
+	FCMODDIRFLAG = -J
 endif
 
 ifeq (,$(CXXFLAGS))
@@ -168,6 +234,12 @@ ifeq (,$(CXXFLAGS))
 endif
 ifeq (,$(CFLAGS))
 	CFLAGS = $(CXXFLAGS)
+endif
+ifeq (,$(FCFLAGS))
+	FCFLAGS = $(CFLAGS)
+endif
+ifeq (,$(LDFLAGS))
+	LDFLAGS = $(CFLAGS)
 endif
 
 ifeq (1,$(MKL_DIRECT))
@@ -199,7 +271,7 @@ ifeq (1,$(MKL)) # sequential
 				--end-group"
 		endif
 	endif
-	LDFLAGS += -lm
+	LDFLAGS += -lpthread -lm
 	ifneq (0,$(OFFLOAD))
 		LDFLAGS += -offload-option,mic,ld,"-lm"
 	endif
@@ -239,13 +311,16 @@ else ifneq (0,$(MKL)) # multi-threaded
 	endif
 else ifneq (0,$(BLAS)) # generic
 	ifneq ($(OS),Windows_NT)
-		LDFLAGS += -fPIC -llapack -lblas
-		CXXFLAGS += -fPIC
-		CFLAGS += -fPIC
+		LDFLAGS += -lblas
 	else
-		LDFLAGS += -llapack.dll -lblas.dll
+		LDFLAGS += -lblas.dll
 	endif
-	LDFLAGS += -lgfortran -lquadmath
+	CLDFLAGS += -lgfortran
+	ifeq (,$(VERSION))
+		LDFLAGS += -lquadmath
+	else ifneq (0,$(shell echo "$$((40500 <= $(VERSION_MAJOR) * 10000 + $(VERSION_MINOR) * 100 + $(VERSION_PATCH)))"))
+		CLDFLAGS += -lquadmath
+	endif
 endif
 
 .PHONY: all
@@ -253,15 +328,39 @@ all: $(OUTDIR)/$(OUTNAME)
 
 $(OUTDIR)/$(OUTNAME): $(OBJECTS) $(LIBNAME).$(LIBEXT)
 	@mkdir -p $(dir $@)
-	$(LD) -o $@ $^ $(LDFLAGS)
+	$(LD) -o $@ $^ $(SLDFLAGS) $(LDFLAGS) $(CLDFLAGS)
+
+$(BLDDIR)/%-mod.o: $(DEPDIR)/include/%.f $(ROOTDIR)/Makefile
+	@mkdir -p $(dir $@)
+	$(FC) $(FCFLAGS) $(FCMTFLAGS) $(DFLAGS) $(IFLAGS) $(TARGET) -c $< -o $@ $(FCMODDIRFLAG) $(dir $@)
+
+$(BLDDIR)/%-mod90.o: $(DEPDIR)/include/%.f90 $(ROOTDIR)/Makefile
+	@mkdir -p $(dir $@)
+	$(FC) $(FCFLAGS) $(FCMTFLAGS) $(DFLAGS) $(IFLAGS) $(TARGET) -c $< -o $@ $(FCMODDIRFLAG) $(dir $@)
+
+$(BLDDIR)/%-mod77.o: $(DEPDIR)/include/%.F $(ROOTDIR)/Makefile
+	@mkdir -p $(dir $@)
+	$(FC) $(FCFLAGS) $(FCMTFLAGS) $(DFLAGS) $(IFLAGS) $(TARGET) -c $< -o $@ $(FCMODDIRFLAG) $(dir $@)
+
+$(BLDDIR)/%-cpp.o: $(SRCDIR)/%.cpp $(HEADERS) $(ROOTDIR)/Makefile
+	@mkdir -p $(dir $@)
+	$(CXX) $(CXXFLAGS) $(DFLAGS) $(IFLAGS) $(TARGET) -c $< -o $@
 
 $(BLDDIR)/%-c.o: $(SRCDIR)/%.c $(HEADERS) $(ROOTDIR)/Makefile
 	@mkdir -p $(dir $@)
 	$(CC) $(CFLAGS) $(DFLAGS) $(IFLAGS) $(TARGET) -c $< -o $@
 
-$(BLDDIR)/%-cpp.o: $(SRCDIR)/%.cpp $(HEADERS) $(ROOTDIR)/Makefile
+$(BLDDIR)/%-f.o: $(SRCDIR)/%.f $(MODULES) $(ROOTDIR)/Makefile
 	@mkdir -p $(dir $@)
-	$(CXX) $(CXXFLAGS) $(DFLAGS) $(IFLAGS) $(TARGET) -c $< -o $@
+	$(FC) $(FCFLAGS) $(FCMTFLAGS) $(DFLAGS) $(IFLAGS) $(TARGET) -c $< -o $@
+
+$(BLDDIR)/%-f90.o: $(SRCDIR)/%.f90 $(MODULES) $(ROOTDIR)/Makefile
+	@mkdir -p $(dir $@)
+	$(FC) $(FCFLAGS) $(FCMTFLAGS) $(DFLAGS) $(IFLAGS) $(TARGET) -c $< -o $@
+
+$(BLDDIR)/%-f77.o: $(SRCDIR)/%.F $(MODULES) $(ROOTDIR)/Makefile
+	@mkdir -p $(dir $@)
+	$(FC) $(FCFLAGS) $(FCMTFLAGS) $(DFLAGS) $(IFLAGS) $(TARGET) -c $< -o $@
 
 .PHONY: clean
 clean:
@@ -269,10 +368,10 @@ ifneq ($(abspath $(BLDDIR)),$(ROOTDIR))
 ifneq ($(abspath $(BLDDIR)),$(abspath .))
 	@rm -rf $(BLDDIR)
 else
-	@rm -f $(OBJECTS)
+	@rm -f $(OBJECTS) $(BLDDIR)/*.mod
 endif
 else
-	@rm -f $(OBJECTS)
+	@rm -f $(OBJECTS) $(BLDDIR)/*.mod
 endif
 
 .PHONY: realclean
@@ -290,9 +389,8 @@ endif
 
 install: all clean
 	@cp $(DEPDIR)/lib/intel64/libxstream.so $(OUTDIR) 2> /dev/null || true
-	@cp $(DEPDIR)/lib/mic/libxstream.so $(OUTDIR) 2> /dev/null || true
-	@cp $(ROOTDIR)/cp2k-perf.plt $(OUTDIR) 2> /dev/null || true
-	@cp $(ROOTDIR)/cp2k-plot.sh $(OUTDIR) 2> /dev/null || true
-	@cp $(ROOTDIR)/cp2k-perf.sh $(OUTDIR) 2> /dev/null || true
-	@cp $(ROOTDIR)/cp2k.sh $(OUTDIR) 2> /dev/null || true
+	@cp $(ROOTDIR)/plot.plt $(OUTDIR) 2> /dev/null || true
+	@cp $(ROOTDIR)/plot.sh $(OUTDIR) 2> /dev/null || true
+	@cp $(ROOTDIR)/benchmark.sh $(OUTDIR) 2> /dev/null || true
+	@cp $(ROOTDIR)/multi-dgemm.sh $(OUTDIR) 2> /dev/null || true
 
