--- a/samples/entropy/Makefile
+++ b/samples/entropy/Makefile
@@ -389,7 +389,5 @@ endif
 
 install: all clean
 	@cp $(DEPDIR)/lib/intel64/libxstream.so $(OUTDIR) 2> /dev/null || true
-	@cp $(ROOTDIR)/copy.plt $(OUTDIR) 2> /dev/null || true
-	@cp $(ROOTDIR)/plot.sh $(OUTDIR) 2> /dev/null || true
-	@cp $(ROOTDIR)/copy.sh $(OUTDIR) 2> /dev/null || true
+	@cp $(ROOTDIR)/$(OUTNAME).sh $(OUTDIR) 2> /dev/null || true
 
