--- a/ide/libxstream.vcxproj
+++ b/ide/libxstream.vcxproj
@@ -56,6 +56,7 @@
   <PropertyGroup Label="Globals">
     <ProjectName>libxstream</ProjectName>
     <ProjectGuid>{3A6B8214-52C3-4600-9C82-5FBA21660100}</ProjectGuid>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='debug|Win32'" Label="Configuration">
