--- a/samples/entropy/entropy.vcxproj
+++ b/samples/entropy/entropy.vcxproj
@@ -32,6 +32,7 @@
   <PropertyGroup Label="Globals">
     <ProjectName>entropy</ProjectName>
     <ProjectGuid>{40028F92-5AE1-40EF-AE8D-59531568E42A}</ProjectGuid>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='debug|Win32'" Label="Configuration">
