--- a/samples/entropy/Makefile
+++ b/samples/entropy/Makefile
@@ -151,6 +151,9 @@ ifneq (,$(filter icpc icc ifort,$(CXX) $(CC) $(FC)))
 			FCFLAGS := -g $(FCFLAGS)
 		endif
 	endif
+	ifeq (0,$(EXP))
+		CXXFLAGS += -fno-exceptions
+	endif
 	ifneq ($(OMP),0)
 		CXXFLAGS += -openmp
 		CFLAGS += -openmp
@@ -216,6 +219,9 @@ else # GCC assumed
 			CFLAGS := -g $(CFLAGS)
 			FCFLAGS := -g $(FCFLAGS)
 		endif
+	endif
+	ifeq (0,$(EXP))
+		CXXFLAGS += -fno-exceptions
 	endif
 	ifneq ($(OMP),0)
 		CXXFLAGS += -fopenmp
