Added a dummy translation unit to check C interface compliance (C89). Enabled pedantic C89 compliance for the library build (PEDANTIC=1). Updated Makefile to support pedantic checks; made some additional cosmetic changes.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ compiler:
 
 script:
   - make -e realclean &&
-    make -e -j
+    make -e PEDANTIC=1 -j
 
   - cd samples/copy &&
     make -e realclean &&
